# amr_524

./: .gitignore  .pre-commit-config.yaml  README.md  circle.npy  evolvQtree.py  field.py  mesh.py  noxfile.py  pyproject.toml  solver.py  spinodal.py
.github/workflows/: ci.yml
lib/: field.xyz
src/: evolvQtree.py  field.py  mesh.py  solver.py
src/amr_524/: evolvQtree.py  field.py  mesh.py
src/tests/: test.py  test_.py
